--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -35,6 +35,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="nometamask">
+      You need to install <a href="https://metamask.io/">Metamask</a> to see this page
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
