--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,7 +29,19 @@
 <div id="nometamask">
     <div class="container" style="padding-top: 10px;">
         <div class="alert alert-danger">
-            You need to install <a href="https://metamask.io/" target="_blank">Metamask</a> to see this page
+            <div>You need to install <a href="https://metamask.io/" target="_blank">Metamask</a> to see this page.</div>
+            <div>
+                Don't have the time to install Metamask? Then:
+            </div>
+            <div style="margin-top: 5px">
+                <a href="https://www.loom.com/share/48a64e2e31444589944bdd4ef6188d2b" target="_blank">
+                    <button
+                            class="btn btn-light"
+                    >
+                        Watch Demo Video
+                    </button>
+                </a>
+            </div>
         </div>
     </div>
 </div>
