--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,7 +29,16 @@
 <div id="nometamask">
     <div class="container" style="padding-top: 10px;">
         <div class="alert alert-danger">
-            <div>You need to install <a href="https://metamask.io/" target="_blank">Metamask</a> to see this page.</div>
+            <div>If you see this alert you need to:</div>
+            <ol>
+                <li>Install <a href="https://metamask.io/" target="_blank">Metamask</a> to see this page</li>
+                <li>Switch metamask on the Rinkeby testnet</li>
+            </ol>
+            <div>
+               <a href="https://github.com/philippegirard/lottery-eth-smart-contract" target="_blank">
+                Project's source code
+                </a> 
+            </div>
             <div>
                 Don't have the time to install Metamask? Then:
             </div>
