--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,19 +29,16 @@
 <div id="nometamask">
     <div class="container" style="padding-top: 10px;">
         <div class="alert alert-danger">
-            <div>If you see this alert you need to:</div>
+            <div>Error! If you see this:</div>
             <ol>
                 <li>Install <a href="https://metamask.io/" target="_blank">Metamask</a> to see this page</li>
-                <li>Switch metamask on the Rinkeby testnet</li>
+                <li>Switch Metamask to the Rinkeby testnet</li>
             </ol>
-            <div>
-               <a href="https://github.com/philippegirard/lottery-eth-smart-contract" target="_blank">
-                Project's source code
-                </a> 
-            </div>
             <div>
                 Don't have the time to install Metamask? Then:
             </div>
+
+            <div style="display: flex; flex-direction: row; align-items: center">
             <div style="margin-top: 5px">
                 <a href="https://www.loom.com/share/48a64e2e31444589944bdd4ef6188d2b" target="_blank">
                     <button
@@ -50,6 +47,13 @@
                         Watch Demo Video
                     </button>
                 </a>
+            </div>
+
+            <div style="margin-left: 10px">
+                <a href="https://github.com/philippegirard/lottery-eth-smart-contract" target="_blank">
+                    Source code on Github
+                </a>
+            </div>
             </div>
         </div>
     </div>
